[package]
name = "gst-log-parser"
version = "0.2.0"
authors = ["Guillaume Desmottes <guillaume@desmottes.be>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/gdesmott/gst-log-parser/"
keywords = ["gstreamer", "multimedia"]
description = "Crate providing a convenient API to parse GStreamer logs"

[dependencies]
itertools = "0.10"
gstreamer = "0.19"
regex = "1.3"
lazy_static = "1.4"
failure = "0.1.8"
anyhow = "1"

[[example]]
name = "dump"

[[example]]
name = "flow"

[[example]]
name = "latency"

[[example]]
name = "omx-perf"

[[example]]
name = "track-frames-omx"

[[example]]
name = "ts-diff"

[dev-dependencies]
structopt = "0.3"
colored = "2.0"
gnuplot = "0.0.37"
