[package]
name = "gst-log-parser"
version = "0.5.1"
authors = ["Guillaume Desmottes <guillaume@desmottes.be>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/gdesmott/gst-log-parser/"
keywords = ["gstreamer", "multimedia"]
description = "Crate providing a convenient API to parse GStreamer logs"

[dependencies]
itertools = "0.14"
gstreamer = "0.23"
regex = "1.3"
lazy_static = "1.4"
thiserror = "2.0"
anyhow = "1"

[[example]]
name = "dump"

[[example]]
name = "flow"

[[example]]
name = "latency"

[[example]]
name = "omx-perf"

[[example]]
name = "track-frames-omx"

[[example]]
name = "ts-diff"

[[example]]
name = "thread-split"

[dev-dependencies]
structopt = "0.3"
colored = "3.0"
gnuplot = "0.0.44"
